[tool.poetry]
name = "ikfm2501gridview"
version = "0.1.0"
description = ""
authors = ["lesguillemets <kgkacko+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
plotly = "^5.24.1"
pandas = "^2.2.3"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
